apps/media/seba/k8s-manifests/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: seba
  namespace: media
subsets:
- addresses:
  - ip: 192.168.1.48
  ports:
  - port: 8080
