apps/media/seba/k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seba
  namespace: ingress-nginx
spec:
  ports:
  - port: 8080
    targetPort: 8080
