apps/media/seba/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: seba
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: seba.rmikl.pl
    http:
      paths:
      - backend:
          service:
            name: seba
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - seba.rmikl.pl
    secretName: rmikl.pl
